Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.1
-
None
-
026edd4bcefd6f0cffa72c2385407c28042b4b36 (qt/qttools/dev) c3510a4292b7f0ca95f414bf58688c6675bf317b (qt/qttools/6.0) c72bc916751d1dd5cd6cc4188122a1f82eaed623 (qt/qttools/6.1)
-
Da Vinci sprint 28
Description
QDoc maintains a list of function overloads as a linked list:
primary -> f1 -> f2
when the primary is moved to another aggregate (e.g. class) using \relates, QDoc incorrectly sets primary's nextOverload pointer to nullptr. This means that subsequent \fn commands for f1 and f2 will not succeed in finding a match.
This is a regression from 6.0 introduced by 550c3031c2fbafe89daec4046dd45946ee8a788b.